# FarmHarvest

./: .replit  app.py  models.py  pyproject.toml  users.json
attached_assets/: Pasted-Build-a-fully-offline-capable-web-application-for-farmers-and-agricultural-students-that-takes-soil--1747632226647.txt
ml_models/: chatbot_model.py  crop_recommendation_model.py  disease_detection_model.py
routes/: __init__.py  ml_routes.py
static/: manifest.json
static/css/: custom.css
static/data/: chatbot_data.js  crop_data.js  disease_data.js  indian_crop_data.js
static/js/: camera.js  chatbot.js  indexedDB.js  main.js  ml_api.js  service-worker.js
static/models/: crop_recommendation_model.js  disease_detection_model.js
templates/: all_crops.html  chatbot.html  crop_recommendations.html  dashboard.html  disease_detection.html  indian_crops.html  layout.html  login.html  profile.html  register.html  soil_test.html
